// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chrome #check should throw if the element is not found 1`] = `
[Error: Error: :check() > selector input doesn't exist.
    at selector (<anonymous>:9:23)
    at <anonymous>:10:16
    at <anonymous>:16:9]
`;

exports[`Chrome #click" should throw an error for elements that are not there 1`] = `
[Error: Error: :click() > Unable to find element by selector: .nope
    at click (<anonymous>:6:15)
    at <anonymous>:12:4
    at <anonymous>:18:9]
`;

exports[`Chrome #evaluate should throw when errors happen in Chrome 1`] = `
[Error: Error: I should propogate
    at result (<anonymous>:4:23)
    at <anonymous>:5:16
    at <anonymous>:11:9]
`;

exports[`Chrome #focus should throw an error if the element isn't there 1`] = `[Error: Could not find node with given id]`;

exports[`Chrome #text should throw an error if the element isn't found 1`] = `
[Error: Error: :text() > selector div wasn't found.
    at getText (<anonymous>:6:27)
    at <anonymous>:9:16
    at <anonymous>:15:9]
`;

exports[`Chrome #type should should throw if the element never shows up 1`] = `[Error: Could not find node with given id]`;

exports[`Chrome #uncheck should throw if the element is not found 1`] = `
[Error: Error: :uncheck() > Couldn't find 'input' on page.
    at selector (<anonymous>:6:27)
    at <anonymous>:10:16
    at <anonymous>:16:9]
`;
